@@ -6,6 +6,7 @@ static GtkIconFactory *icon_factory = NULL;
 const char *ICON_LIST[] = {
   OL_STOCK_TRAYICON,
   OL_STOCK_LOADING,
+  OL_STOCK_OSD_BG,
 };
 
 void 
